# ParallelProgrammingMPI

./: .gitignore  CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  main.cpp
